src/index.scss
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

@font-face{
    font-family: chicago;
    src: url(../fonts/ChicagoNormal.ttf);
}

body {
    background-image: url(../images/background.png);
    display: block;
    font-family: 'chicago';
}

#wrapper {
    width: 100%;
    height: 850px;
    border: none;
    display: flex;
    justify-content: center;
    padding-top: 25px;
}

#github-logo{
    height: 45px;
    width: 45px;
    background-image: url(../images/ghlogo_border.png);
    position: absolute;
    margin-top: 430px;
    margin-left: 420px;
    background-size: 45px;
}

#github-logo:hover{
    background-image: url(../images/github_hover.png);
}
#linked-logo{
    height: 47px;
    width: 47px;
    background-image: url(../images/link_border.png);
    position: absolute;
    margin-top: 428px;
    margin-left: 465px;
    background-size: 47px;
}

#linked-logo:hover{
    background-image: url(../images/link_border_hover.png);
}

#innerbox {
    width: 1000px;
    height: 100%;
    border: none;
 

    display: flex;
    flex-direction: column;
    justify-content: end;
    align-items: center;
}

#celeb {
    margin-left: 10px;

}
#keyboard {
    background-repeat: no-repeat;
    width: 800px;
    height: 275px;
    background-size: 800px, 308px;
    opacity: 100%;
    border: none;
    display: flex;
    position: absolute;    
}

#monitor {
    background-repeat: no-repeat;
    width: 680px;
    height: 720px;
    background-size: 670px,  650px;
    opacity: 100%;
    background-image :url(../images/Computer.png);
    border: none;

}

#mouse {
    position: absolute;
    height: 100px;
    width: 115px;

    margin-top: 450px;
    margin-left: 556px;
 
}

#mouse:hover{
    cursor: pointer
}

#inner-monitor {
    margin-left: 90px;
    margin-top: 40px;
    width: 420px;
    height: 330px;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: space-evenly;

}


#modal-wrapper{
    display: none;
    position: absolute;
    margin-left: -3px;
    width: 420px;
    height: 324px;
    background-color: rgba(169, 169, 169, 0.85);
    z-index: 1;
    border-radius: 25px;
}

#modal{
    display: none;
    width: 280px;
    height: fit-content;
    background-color: white;
    opacity: 100;
    border: black 1px solid;
    margin-left: 50px;
    margin-top: 100px;
    font-size: 13px;
    font-family: Arial;
    padding: 10px 17px 10px;
}

#text-box{
    height: 250px;
    width: 380px;
    background-image: url(../images/window.png);
    border: solid black 1px;
    margin-top: 20px;
    display: none;
}

#startup{
    height: 40px;
    width: 40px;
    background-image: url(../images/happymac.webp);
    background-size: 40px;
    display: none;
    
}

#welcome{
    height: 100px;
    width: 300px;
    background-image: url(../images/Welcome_to_slip.png);
    background-size: 300px 100px;
    display: none;
}

#startup-monitor{
    height: 100%;
    width: 98%;

    background-image: url(../images/fullscreen.png);
    border-radius: 35px;
    display: flex;
    align-items: center;
    justify-content: center;
}

#entry-box {
    height: 20px;
    width: 125px;
    margin-top: 00px;
 
}

#instructions{
    display: none;
    background-color: white;
    border-radius: 7px;
    width: 100px;

}

#instructions:hover{
    background-color: gray;
    cursor: pointer;
}

#submit {
 width: 120px;
 background-color: white;
 border-radius: 7px;
 font-size: 12px;
}

#submit:hover{
    background-color: gray;
    cursor: pointer;
}

#rules{
    background-color: white;
    border-radius: 8px;
    font-size: 12px;
}

#rules:hover{
    background-color: gray;
    cursor: pointer;
}

#getSloth {
    height: 30px;
    width: 370px;
    display: flex; 
    justify-content: space-between;
    align-items: center;
    display: none;
}


ul {
    margin-top: 10px;
    margin-left: 7px;
}

#youEntered {
    margin-left: 10px;
}

#otherSloths {
    margin-left: 10px;
}
#slHeader {
    padding-left: 10px;
   

}

#youEntered {
    font-size:20px;
    font-family: 'chicago';
    margin-top: 10px;
}

.sloth-list li:hover {
    cursor: pointer;
}

#otherSloths{
    font-family:'chicago';
    font-size: 14px;
}

#slothItem{
    font-family:'chicago'
}

#intro-box{
    margin-left: 10px;
    font-family:'chicago';
    margin-right: 10px;
    margin-top: 10px;
}

#explanation-box{
    margin-left: 15px;
    font-family: 'chicago';
    margin-right: 10px;
    margin-top: 20px;
    height: 230px;
    display: none;
    flex-direction: column;
}

#handpos-box{
    margin-left: 0px;
    font-family: 'chicago';
    margin-top: 20px;
    margin-left: 10px;
    height: 230px;
    display: none;
    flex-direction: column;
    font-size: 14px;
}

#handpos-box2{
    margin-left: 0px;
    font-family: 'chicago';
    margin-top: 20px;
    margin-left: 10px;
    height: 230px;
    display: none;
    flex-direction: column;
    font-size: 14px;
}
/* ... */

